# ManuCostModel

./: .gitignore  .travis.yml  LICENSE  README.rst  _README.rst.html  _iframe.html  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
examples/Aircraft Wing/: README.txt  examples.py
examples/Aircraft Wing/Input Databases/: ScalingVariables.xml  constructionVariablesDatabase.xml  equipmentVariablesDatabase.xml  manufacturingDatabase.xml  materialsDatabase.xml  productionMethodsDatabase.xml  productionVariablesDatabase.xml
examples/Aircraft Wing/Input Databases/CSV Files/: Airfoils Distribution.csv  Airfoils_EP2013-1.csv  (+21 more)
examples/Aircraft Wing/Output Databases/: costOutput.xml  manufacturingDatabase.xml  results.xlsx
examples/aircraft wing/: examples.py
src/Cost Model/: ManuCostModel.py  MapParametersIn.py  MapParametersOut.py  __version__.py
src/ManuCostModel/: CostModel.py  DataVis.py  LaminateSizing.py  MapParameters.py  MapParametersIn.py  MapParametersOut.py  PartDecomposition.py  Tools.py  __init__.py
tests/: tests.py
tests/Input Databases/: ScalingVariables.xml  equipmentVariablesDatabase.xml  manufacturingDatabase.xml  materialsDatabase.xml  productionMethodsDatabase.xml  productionVariablesDatabase.xml
tests/Input Databases/CSV Files/: Adhesive_1_Cure_Cycle.csv  Airfoils Distribution.csv  Airfoils_NACA-2412.csv  DER383_cureCycle.csv  LY1564_cureCycle.csv  M21_cureCycle.csv  MTM44-1 Autoclave_cureCycle.csv  MTM44-1 Oven_cureCycle.csv  MTM44-1 Postcure_cureCycle.csv  Resin_1_Cure_Cycle.csv  Sweep.csv  WebLocation.csv
