[metadata]
name = ManuCostModel
version = 0.0.1
license = BSD 3-Clause
description = Manufacturing Cost Model
long_description = file: README.rst
author = Edward Fagan
author_email = edward_mcm@fastmail.com
classifiers=
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True


[options.packages.find]
where=src